--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "eslint": ">=9"
   },
   "dependencies": {
-    "@eslint/js": "^9.17.0",
-    "@stylistic/eslint-plugin": "^2.12.1",
-    "eslint-plugin-import": "^2.31.0",
+    "@eslint/js": "9.35.0",
+    "@stylistic/eslint-plugin": "5.3.1",
+    "eslint-plugin-import": "2.32.0",
     "eslint-plugin-import-newlines": "^1.4.0",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "typescript-eslint": "^8.19.0"
+    "typescript-eslint": "8.44.0"
+  },
+  "devDependencies": {
+    "eslint": "9.35.0"
   }
 }
