--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@stylistic/eslint-plugin": "5.3.1",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-import-newlines": "^1.4.0",
+    "eslint-plugin-jsdoc": "59.0.2",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
