--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript-eslint": "8.44.0"
   },
   "devDependencies": {
-    "eslint": "9.35.0"
+    "eslint": "9.35.0",
+    "globals": "16.4.0"
   }
 }
